package-lock deleted

--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,14 @@
 		<meta charset="utf-8">
 		<!-- <base href="/"> -->
 		<title>AquaGradus Прима Тора Самогонный аппарат</title>
-		<meta name="description" content="">
+		<meta name="description" content="Экономьте время, деньги и здоровье с помощью домашнего алкоголя">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		
 		<!-- Template Basic Images Start -->
-		<meta property="og:image" content="path/to/image.jpg">
+		<meta property="og:image" content="img/BG-prima.jpg">
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="628" />
 		<link rel="icon" href="img/favicon/favicon.ico">
 		<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
 		<!-- Template Basic Images End -->
@@ -19,9 +21,19 @@
 		<!-- Custom Browsers Color End -->
 		<link rel="stylesheet" href="css/animate.min.css">
 		<link rel="stylesheet" href="css/main.min.css">
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-TGXVGW8');</script>
+		<!-- End Google Tag Manager -->
 	</head>
 	<body>
-		
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TGXVGW8"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
 		<header>
 			<div class="nav-sticky">
 				<div class="row navbar-desctop">
@@ -32,7 +44,7 @@
 						<ul>
 							<li><a href="#specification">Характеристики</a></li>
 							<li><a href="#catalog">Продукция</a></li>
-							<li><a href="#gallery">Галерея</a></li>
+							<li style="display: none;"><a href="#gallery">Галерея</a></li>
 							<li><a href="#review">Отзывы</a></li>
 							<li><a href="#about">Как мы работаем?</a></li>
 							<li><a href="#footer">Контакты</a></li>
@@ -41,8 +53,8 @@
 					<div class="col-md-3 header-call">
 						<a href="#" class="btn btn-orange" data-toggle="modal" data-target="#header-call">заказать звонок</a>
 						<div class="header-phones">
-							<p>+38 (050) 394-25-81</p>
-							<p>+38 (067) 261-16-48</p>
+							<p><a href="tel:+380501811050" class="binct-phone-number-1">+38 (050) 181-10-50</a></p>
+							<p><a href="tel:+380672506779" class="binct-phone-number-2">+38 (067) 250-67-79</a></p>
 						</div>
 					</div>
 				</div>
@@ -243,12 +255,12 @@
 								<li>
 									<div class="label">Марка стали колонны</div>
 									<div class="separator"></div>
-									<div class="valey">Колонна: AISI 304,<br>Емкость: AISI 430 (Ферром-ая)</div>
+									<div class="valey">Колонна: AISI 304<br>Емкость: AISI 430 <span class="hd">(Ферром-ая)</span></div>
 								</li>
 								<li>
 									<div class="label">Наполнитель (фильтр)</div>
 									<div class="separator"></div>
-									<div class="valey">Насадка Панченкова (7 м)</div>
+									<div class="valey">Насадка Панченкова <span class="hd">(7 м)</span></div>
 								</li>
 								<li>
 									<div class="label">Охладители</div>
@@ -266,7 +278,7 @@
 									<div class="valey">Усиленная (Штамп, ребра жесткости)</div>
 								</li>
 								<li>
-									<div class="label">Толщина крышка / стенка / дно</div>
+									<div class="label">Толщина<br>крышка / стенка / дно</div>
 									<div class="separator"></div>
 									<div class="valey">1,2 мм /1 мм / 1,5 мм</div>
 								</li>
@@ -314,7 +326,7 @@
 									<div class="tab-speac">2 л</div>
 								</li>
 								<li>
-									<div class="label">40-градусного напитка,<br>пригодного для употребления</div>
+									<div class="label">Пригодного для<br>употребления</div>
 									<div class="separator"></div>
 									<div class="tab-speac">5.0 л</div>
 								</li>
@@ -452,21 +464,21 @@
 			<div class="modal animated zoomIn" tabindex="-1" role="dialog" id="obzor-instr">
 				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 					<div class="modal-content embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/0MOFQ0E3xlI"></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/IR0gBH_8Shk"></iframe>
 					</div>
 				</div>
 			</div>
 			<div class="modal animated zoomIn" tabindex="-1" role="dialog" id="first-instr">
 				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 					<div class="modal-content embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/0MOFQ0E3xlI"></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/UnIszQhFT9E"></iframe>
 					</div>
 				</div>
 			</div>
 			<div class="modal animated zoomIn" tabindex="-1" role="dialog" id="second-instr">
 				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 					<div class="modal-content embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/0MOFQ0E3xlI"></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YCNF32XeykU"></iframe>
 					</div>
 				</div>
 			</div>
@@ -476,7 +488,7 @@
 				<div class="row">
 					<h2 class="h2">Успейте заказать AquaGradus™ Прима Тора по супер цене!</h2>
 					<div class="catalog-box">
-						<div class="col-md-3 cat-img-container">
+						<div class="col-md-3 col-lg-3 cat-img-container">
 							<div class="cat-img active">
 								<img src="img/catalog/25l-size.jpg" alt="AquaGradus™ Прима Тора 25 литров" class="img-responsive">
 							</div>
@@ -487,7 +499,7 @@
 								<img src="img/catalog/50l-size.jpg" alt="AquaGradus™ Прима Тора 50 литров" class="img-responsive">
 							</div>
 						</div>
-						<div class="col-md-5 cat-choise">
+						<div class="col-md-6 col-lg-5 cat-choise">
 							<div class="cat-choise-complect">
 								<div class="tabs">
 									<p class="title">Выберите нужный объем бака</p>
@@ -747,7 +759,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 cat-complect">
+						<div class="col-md-3 col-lg-4 cat-complect">
 							<p class="title">Комплектация</p>
 							<ul>
 								<li>
@@ -1053,7 +1065,7 @@
 			<div class="modal animated zoomIn" tabindex="-1" role="dialog" id="g-plant-m">
 				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 					<div class="modal-content embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/J4hHh8Qp55M"></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/IR0gBH_8Shk"></iframe>
 					</div>
 				</div>
 			</div>
@@ -2067,27 +2079,27 @@
 		<div class="container">
 			<div class="row">
 				<h2 class="h2">Как мы работаем?</h2>
-				<div class="col-md-2 about-step">
+				<div class="col-md-4 col-lg-2 about-step">
 					<img src="img/about/step-1.png" alt="" class="img-responsive about-img">
 					<p class="about-title">Вы оставляете заявку на сайте или заказываете обратный звонок</p>
 				</div>
-				<div class="col-md-2 about-step">
+				<div class="col-md-4 col-lg-2 about-step">
 					<img src="img/about/step-2.png" alt="" class="img-responsive about-img">
 					<p class="about-title">Менеджер уточняет адрес и сообщит дату доставки. Передает заказ на производство</p>
 				</div>
-				<div class="col-md-2 about-step">
+				<div class="col-md-4 col-lg-2 about-step">
 					<img src="img/about/step-3.png" alt="" class="img-responsive about-img">
 					<p class="about-title">Аппарат производится, проходит проверку в отделе качества. Только после этого комплектуется и отправляется транспортной компанией</p>
 				</div>
-				<div class="col-md-2 about-step">
+				<div class="col-md-4 col-lg-2 about-step">
 					<img src="img/about/step-4.png" alt="" class="img-responsive about-img">
 					<p class="about-title">Доставка за 1 - 3 дня в одно из 2300 отделений Новой Почты по всей Украине.</p>
 				</div>
-				<div class="col-md-2 about-step">
+				<div class="col-md-4 col-lg-2 about-step">
 					<img src="img/about/step-5.png" alt="" class="img-responsive about-img">
 					<p class="about-title">При получении, тщательно проверьте посылку на наличие транспортных повреждений и целостности упаковки. Только после этого оплатите картой или наличными</p>
 				</div>
-				<div class="col-md-2 about-step">
+				<div class="col-md-4 col-lg-2 about-step">
 					<img src="img/about/step-6.png" alt="" class="img-responsive about-img">
 					<p class="about-title">Дистиллятор Прима Тора АкваГрадус™ - Домашние напитки до 93°; Гарантия 5 лет; Бесплатная консультация и поддержка клиентов!</p>
 				</div>
@@ -2116,7 +2128,7 @@
 							</div>
 						</div>
 						<div class="card x-collapse">
-							<div class="card-header">
+							<div class="card-header active">
 								<p class="title">
 									<a href="#constructor" class="x-link">Есть ли магазин в моем городе? Хочу посмотреть/пощупать!</a>
 								</p>
@@ -2208,11 +2220,11 @@
 						</li>
 						<li class="cont-item">
 							<img src="img/footer/phone-call.png" alt="" class="img-responsive">
-							<p class="cont">+38 (050) 250-10-53</p>
+							<p class="cont"><a href="tel:+380501811050" class="binct-phone-number-1">+38 (050) 181-10-50</a></p>
 						</li>
 						<li class="cont-item">
 							<img src="img/footer/phone-call.png" alt="" class="img-responsive">
-							<p class="cont">+38(067) 261-29-81</p>
+							<p class="cont"><a href="tel:+380672506779" class="binct-phone-number-2">+38 (067) 250-67-79</a></p>
 						</li>
 						<li class="cont-item">
 							<img src="img/footer/mail.png" alt="" class="img-responsive">
@@ -2291,5 +2303,31 @@
 		</div>
 	</footer>
 	<script src="js/scripts.min.js"></script>
+	<!-- Binotel GetCall -->
+	<script type="text/javascript">
+	(function(d, w, s) {
+	var widgetHash = 'z1fokvh51efsefswz16g', gcw = d.createElement(s); gcw.type = 'text/javascript'; gcw.async = true;
+	gcw.src = '//widgets.binotel.com/getcall/widgets/'+ widgetHash +'.js';
+	var sn = d.getElementsByTagName(s)[0]; sn.parentNode.insertBefore(gcw, sn);
+	})(document, window, 'script');
+	</script>
+	<!-- Binotel GetCall -->
+	<!-- Bitrix -->
+	<script>
+	(function(w,d,u){
+	var s=d.createElement('script');s.async=true;s.src=u+'?'+(Date.now()/60000|0);
+	var h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);
+	})(window,document,'https://cdn.bitrix24.ua/b6001361/crm/site_button/loader_19_g6g78o.js');
+	</script>
+	<!-- Bitrix -->
+	<!-- Binotel CallTracking -->
+	<script type="text/javascript">
+	(function(d, w, s) {
+	var widgetHash = '7krojd8bov74s9xws2z1', ctw = d.createElement(s); ctw.type = 'text/javascript'; ctw.async = true;
+	ctw.src = '//widgets.binotel.com/calltracking/widgets/'+ widgetHash +'.js';
+	var sn = d.getElementsByTagName(s)[0]; sn.parentNode.insertBefore(ctw, sn);
+	})(document, window, 'script');
+	</script>
+	<!-- Binotel CallTracking -->
 </body>
 </html>
