--- a/app/politika-konfidencialnosti/index.html
+++ b/app/politika-konfidencialnosti/index.html
@@ -1,175 +1,150 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
-
-	<meta charset="utf-8">
-
-	<title>Политика конфиденциальности</title>
-	<meta name="description" content="">
-	<meta name="keywords" content="">
-	<meta name="robots" content="">
-
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-	<meta property="og:image" content="../img/AquaGradusLogo.png">
-	<link rel="shortcut icon" href="../img/favicon/favicon.ico" type="image/x-icon">
-	<link rel="apple-touch-icon" href="../img/favicon/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="../img/favicon/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="../img/favicon/apple-icon-114x114.png">
-
-	<!-- Chrome, Firefox OS and Opera -->
-	<meta name="theme-color" content="#000">
-	<!-- Windows Phone -->
-	<meta name="msapplication-navbutton-color" content="#000">
-	<!-- iOS Safari -->
-	<meta name="apple-mobile-web-app-status-bar-style" content="#000">
-
-	<!-- <style>body { opacity: 0; overflow-x: hidden; } html { background-color: #fff; }</style> -->
-
-<!-- Google Tag Manager -->
-<!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-K5KHPKL');</script> -->
-<!-- End Google Tag Manager -->
-
-</head>
-<style>
-
-	* {
-		margin: 0;
-		padding: 0;
-	}
-
-	.main {
-		padding: 30px;
-		padding-bottom: 50px;
-	}
-
-	.container {
-		max-width: 1170px;
-		margin: 0 auto;
-	}
-
-	.row {
-		display: flex;
-		justify-content: center;
-		flex-wrap: wrap;
-	}
-
-	h2, h3 {
-		margin-bottom: 30px;
-		margin-top: 30px;
-	}
-
-	h2 {
-		text-align: center;
-		font-size: 36px;
-	}
-				
-	h3 {
-		font-size: 26px;
-		text-decoration: underline;
-	}
-
-	li {
-		list-style: disc;
-		margin-left: 40px;
-	}
-
-	.footer {
-		background-color: #2395ed;
-		/*padding-top: 30px;*/
-		/*padding-bottom: 30px;*/
-		color: #FFFFFF;
-		text-align: center;
-	}
-
-	.f-col {
-		padding: 30px;
-	}
-
-</style>
-
-<body>
-
-<!-- Google Tag Manager (noscript) -->
-<!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K5KHPKL"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -->
-<!-- End Google Tag Manager (noscript) -->
-
-	<main class="main">
-		<div class="container">
-			<div class="row">
-				<div class="col-12">
-					<h2>Политика конфиденциальности</h2>
-					<h3>Какая информация подлежит сбору</h3>
-					<p>Сбору подлежат только сведения, обеспечивающие возможность поддержки обратной связи с пользователем.</p>
-					<p>Некоторые действия пользователей автоматически сохраняются в журналах сервера:</p>
-					<ul>
-						<li>IP-адрес;</li>
-						<li>данные о типе браузера, надстройках, времени запроса и т. д.</li>
-					</ul>
-					<h3>Как используется полученная информация</h3>
-					<p>Сведения, предоставленные пользователем, используются для связи с ним, в том числе для направления уведомлений об изменении статуса заявки.</p>
-					<h3>Управление личными данными</h3>
-					<p>Личные данные доступны для просмотра, изменения и удаления в личном кабинете пользователя.</p>
-					<p>В целях предотвращения случайного удаления или повреждения данных информация хранится в резервных копиях в течение 7 дней и может быть восстановлена по запросу пользователя.</p>
-					<h3>Предоставление данных третьим лицам</h3>
-					<p>Личные данные пользователей могут быть переданы лицам, не связанным с настоящим сайтом, если это необходимо:</p>
-					<ul>
-						<li>для соблюдения закона, нормативно-правового акта, исполнения решения суда;</li>
-						<li>для выявления или воспрепятствования мошенничеству;</li>
-						<li>для устранения технических неисправностей в работе сайта;</li>
-						<li>для предоставления информации на основании запроса уполномоченных государственных органов.</li>
-					</ul>
-					<p>В случае продажи настоящего сайта пользователи должны быть уведомлены об этом не позднее чем за 10 дней до совершения сделки.</p>
-					<h3>Безопасность данных</h3>
-					<p>Администрация сайта принимает все меры для защиты данных пользователей от несанкционированного доступа, в частности:</p>
-					<ul>
-						<li>регулярное обновление служб и систем управления сайтом и его содержимым;</li>
-						<li>шифровка архивных копий ресурса;</li>
-						<li>регулярные проверки на предмет наличия вредоносных кодов;</li>
-						<li>использование для размещения сайта виртуального выделенного сервера.</li>
-					</ul>
-					<h3>Изменения</h3>
-					<p>Обновления политики конфиденциальности публикуются на данной странице. Для удобства пользователей все версии политики конфиденциальности подлежат сохранению в архивных файлах.</p>
-				</div>
-			</div>
-		</div>
-
-	</main>
-	<footer class="footer">
-		<div class="container">
-			<div class="row">
-				<div class="f-col">
-					<img src="../img/Logo/AquaGradusEng1-2.png" alt="Самогонные аппараты AquaGradus" class="img-responsive">
-					<p>Фабрика дистилляторов и пивоварен</p>
-				</div>
-				<div class="f-col">
-					<div class="f-box">
-						<h5 class="title">Время работы</h5>
-						<p>Пн-Вс с 9-00 до 18-00<br>Сб с 9-00 до 15-00</p>
+	<head>
+		<meta charset="utf-8">
+		<title>Политика конфиденциальности</title>
+		<meta name="description" content="">
+		<meta name="keywords" content="">
+		<meta name="robots" content="">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<meta property="og:image" content="../img/AquaGradusLogo.png">
+		<link rel="shortcut icon" href="../img/favicon/favicon.ico" type="image/x-icon">
+		<link rel="apple-touch-icon" href="../img/favicon/apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="../img/favicon/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="../img/favicon/apple-icon-114x114.png">
+		<!-- Chrome, Firefox OS and Opera -->
+		<meta name="theme-color" content="#000">
+		<!-- Windows Phone -->
+		<meta name="msapplication-navbutton-color" content="#000">
+		<!-- iOS Safari -->
+		<meta name="apple-mobile-web-app-status-bar-style" content="#FFFFFF">
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-TGXVGW8');</script>
+		<!-- End Google Tag Manager -->
+	</head>
+	<style>
+		* {
+			margin: 0;
+			padding: 0;
+		}
+		.main {
+			padding: 30px;
+			padding-bottom: 50px;
+		}
+		.container {
+			max-width: 1170px;
+			margin: 0 auto;
+		}
+		.row {
+			display: flex;
+			justify-content: center;
+			flex-wrap: wrap;
+		}
+		h2, h3 {
+			margin-bottom: 30px;
+			margin-top: 30px;
+		}
+		h2 {
+			text-align: center;
+			font-size: 36px;
+		}
+					
+		h3 {
+			font-size: 26px;
+			text-decoration: underline;
+		}
+		li {
+			list-style: disc;
+			margin-left: 40px;
+		}
+		.footer {
+			background-color: #2395ed;
+			/*padding-top: 30px;*/
+			/*padding-bottom: 30px;*/
+			color: #FFFFFF;
+			text-align: center;
+		}
+		.f-col {
+			padding: 30px;
+		}
+	</style>
+	<body>
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TGXVGW8"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
+		<main class="main">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<h2>Политика конфиденциальности</h2>
+						<h3>Какая информация подлежит сбору</h3>
+						<p>Сбору подлежат только сведения, обеспечивающие возможность поддержки обратной связи с пользователем.</p>
+						<p>Некоторые действия пользователей автоматически сохраняются в журналах сервера:</p>
+						<ul>
+							<li>IP-адрес;</li>
+							<li>данные о типе браузера, надстройках, времени запроса и т. д.</li>
+						</ul>
+						<h3>Как используется полученная информация</h3>
+						<p>Сведения, предоставленные пользователем, используются для связи с ним, в том числе для направления уведомлений об изменении статуса заявки.</p>
+						<h3>Управление личными данными</h3>
+						<p>Личные данные доступны для просмотра, изменения и удаления в личном кабинете пользователя.</p>
+						<p>В целях предотвращения случайного удаления или повреждения данных информация хранится в резервных копиях в течение 7 дней и может быть восстановлена по запросу пользователя.</p>
+						<h3>Предоставление данных третьим лицам</h3>
+						<p>Личные данные пользователей могут быть переданы лицам, не связанным с настоящим сайтом, если это необходимо:</p>
+						<ul>
+							<li>для соблюдения закона, нормативно-правового акта, исполнения решения суда;</li>
+							<li>для выявления или воспрепятствования мошенничеству;</li>
+							<li>для устранения технических неисправностей в работе сайта;</li>
+							<li>для предоставления информации на основании запроса уполномоченных государственных органов.</li>
+						</ul>
+						<p>В случае продажи настоящего сайта пользователи должны быть уведомлены об этом не позднее чем за 10 дней до совершения сделки.</p>
+						<h3>Безопасность данных</h3>
+						<p>Администрация сайта принимает все меры для защиты данных пользователей от несанкционированного доступа, в частности:</p>
+						<ul>
+							<li>регулярное обновление служб и систем управления сайтом и его содержимым;</li>
+							<li>шифровка архивных копий ресурса;</li>
+							<li>регулярные проверки на предмет наличия вредоносных кодов;</li>
+							<li>использование для размещения сайта виртуального выделенного сервера.</li>
+						</ul>
+						<h3>Изменения</h3>
+						<p>Обновления политики конфиденциальности публикуются на данной странице. Для удобства пользователей все версии политики конфиденциальности подлежат сохранению в архивных файлах.</p>
 					</div>
 				</div>
-				<div class="f-col">
-					<h5 class="title">Контакты</h5>
-					<div>
-						<a href="tel:+380504281710" class="num">+38 (050) 428-17-10</a><br><a href="tel:+380673262766" class="num">+38 (067) 326-27-66</a>
+			</div>
+		</main>
+		<footer class="footer">
+			<div class="container">
+				<div class="row">
+					<div class="f-col">
+						<img src="../img/Logo/AquaGradusEng1-2.png" alt="Самогонные аппараты AquaGradus" class="img-responsive">
+						<p>Фабрика дистилляторов и пивоварен</p>
 					</div>
-					<p>ул. Шиллингера 3, г. Харьков</p>
-					<p>aquagradus@gmail.com</p>
-					<a href="https://aquagradus.com/">aquagradus.com</a>
+					<div class="f-col">
+						<div class="f-box">
+							<h5 class="title">Время работы</h5>
+							<p>Пн-Вс с 9-00 до 18-00<br>Сб с 9-00 до 15-00</p>
+						</div>
+					</div>
+					<div class="f-col">
+						<h5 class="title">Контакты</h5>
+						<div>
+							<p class="cont"><a href="tel:+380501811050">+38 (050) 181-10-50</a></p>
+							<p class="cont"><a href="tel:+380672506779">+38 (067) 250-67-79</a></p>
+						</div>
+						<p>ул. Шиллингера 3, г. Харьков</p>
+						<p>aquagradus@gmail.com</p>
+						<a href="https://aquagradus.com/">aquagradus.com</a>
+					</div>
 				</div>
 			</div>
-		</div>
-	</footer>
-
-	<!-- <link rel="stylesheet" href="../css/pc.min.css"> -->
-	<!-- <script src="../js/scripts.min.js"></script> -->
-
-</body>
+		</footer>
+		<!-- <link rel="stylesheet" href="../css/pc.min.css"> -->
+		<!-- <script src="../js/scripts.min.js"></script> -->
+	</body>
 </html>
