--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,10 @@
 		<!-- Custom Browsers Color End -->
 		<link rel="stylesheet" href="css/animate.min.css">
 		<link rel="stylesheet" href="css/main.min.css">
+
+		<!--NEXTEL - Коллтрекинг и виджеты-->
+		<script async src="https://cstat.nextel.com.ua:8443/tracking/script/766/563"></script>
+
 		<!-- Google Tag Manager -->
 		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -28,10 +32,21 @@
 		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 		})(window,document,'script','dataLayer','GTM-TGXVGW8');</script>
 		<!-- End Google Tag Manager -->
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-NGR64NJ');</script>
+		<!-- End Google Tag Manager -->
 	</head>
 	<body>
 		<!-- Google Tag Manager (noscript) -->
 		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TGXVGW8"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NGR64NJ"
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- End Google Tag Manager (noscript) -->
 		<header>
@@ -40,7 +55,7 @@
 					<div class="col-md-2 header-logo">
 						<a href="#"><img src="img/Logo/AquaGradusEng1-1.png" alt="aquagradus лого" class="img-responsive"></a>
 					</div>
-					<nav class="col-md-7 header-nav">
+					<nav class="col-md-6 header-nav">
 						<ul>
 							<li><a href="#specification">Характеристики</a></li>
 							<li><a href="#catalog">Продукция</a></li>
@@ -50,12 +65,12 @@
 							<li><a href="#footer">Контакты</a></li>
 						</ul>
 					</nav>
-					<div class="col-md-3 header-call">
-						<a href="#" class="btn btn-orange" data-toggle="modal" data-target="#header-call">заказать звонок</a>
+					<div class="col-md-4 header-call">
 						<div class="header-phones">
-							<p><a href="tel:+380501811050" class="binct-phone-number-1">+38 (050) 181-10-50</a></p>
-							<p><a href="tel:+380672506779" class="binct-phone-number-2">+38 (067) 250-67-79</a></p>
+							<!-- <p><a href="tel:+380500113084" class="ct-phone">+38 (050) 011-30-84</a></p> -->
+							<p><strong><a href="tel:+380677596326" class="ct-phone">+38 (067) 759-63-26</a></strong></p>
 						</div>
+						<a href="#" class="btn btn-orange" data-toggle="modal" data-target="#header-call">заказать звонок</a>
 					</div>
 				</div>
 				<div class="navbar-mobile">
@@ -73,7 +88,7 @@
 					<ul id="menu" class="header-nav">
 						<li><a href="#specification">Характеристики</a></li>
 						<li><a href="#catalog">Продукция</a></li>
-						<li><a href="#gallery">Галерея</a></li>
+						<li><a href="#gallery" style="display: none;">Галерея</a></li>
 						<li><a href="#review">Отзывы</a></li>
 						<li><a href="#about">Как мы работаем?</a></li>
 						<li><a href="#footer">Контакты</a></li>
@@ -104,6 +119,7 @@
 									<!-- hidden -->
 									<input type="hidden" name="DATA[TITLE]" value="Новый лид: Аппарат - Прима; Форма - Первый экран">
 									<input type="hidden" name="DATA[SOURCE_ID]" value="Веб-сайт Прима">
+									<!-- <input type="hidden" name="DATA[STATUS_ID]" value="IN_PROCESS"> -->
 									<!-- hidden -->
 									<input type="text" class="form-item" name="DATA[NAME]" required placeholder="Ваше имя">
 									<input type="tel" class="form-item" name="DATA[PHONE_MOBILE]" required placeholder="Ваш телефон">
@@ -125,10 +141,10 @@
 										<i></i>
 										<p>Легок в управлении, справится новичок</p>
 									</li>
-									<li>
+									<!-- <li>
 										<i></i>
 										<p>Можно перегонять хоть на костре</p>
-									</li>
+									</li> -->
 									<li>
 										<i></i>
 										<p>Ректификация (96 градусов) без дооборудования</p>
@@ -1491,7 +1507,7 @@
 									<p class="adds-name">Водяной ТЭН для самогонного аппарата</p>
 									<div class="adds-text">Для организации автономного и комбинированного нагрева.</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>250грн</p>
+										<p class="price"><span>Цена: </span>300грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-ten">подробнее</button>
 								</div>
@@ -1544,7 +1560,7 @@
 									<p class="adds-name">Набор профессиональных ареометров и мерная колба</p>
 									<div class="adds-text">Для точного измерения продукта (3 ареометра и мерная колба).</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>350грн</p>
+										<p class="price"><span>Цена: </span>450грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-kit">подробнее</button>
 								</div>
@@ -1735,7 +1751,7 @@
 										Цена:
 									</div>
 									<div class="price">
-										250₴
+										300₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-ten-form">
@@ -2050,7 +2066,7 @@
 										Цена:
 									</div>
 									<div class="price">
-										350₴
+										450₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-areometri-form">
@@ -2179,7 +2195,7 @@
 							<div class="collapse">
 								<div class="card-block">
 									<p>
-										Оформление кредита требует личной подписи и Вашего присутствия, что крайне неудобно для покупателя. Поэтому если Вы желаете купить аппарат AquaGradus™ Стандарт в кредит мы предлагаем самостоятельно оформить потребительский кредит в ближайшем к Вам банковском учреждении. На сайте оформление кредита пока, к сожалению, отсутствует.
+										Оформление кредита требует личной подписи и Вашего присутствия, что крайне неудобно для покупателя. Поэтому если Вы желаете купить AquaGradus™ Приму Тора в кредит мы предлагаем самостоятельно оформить потребительский кредит в ближайшем к Вам банковском учреждении. На сайте оформление кредита пока, к сожалению, отсутствует.
 									</p>
 								</div>
 							</div>
@@ -2218,13 +2234,13 @@
 							<img src="img/footer/placeholder.png" alt="" class="img-responsive">
 							<p class="cont">г. Харьков, ул. Пушкинская 3</p>
 						</li>
+						<!-- <li class="cont-item">
+							<img src="img/footer/phone-call.png" alt="" class="img-responsive">
+							<p class="cont"><a href="tel:+380500113084" class="ct-phone">+38 (050) 011-30-84</a></p>
+						</li> -->
 						<li class="cont-item">
 							<img src="img/footer/phone-call.png" alt="" class="img-responsive">
-							<p class="cont"><a href="tel:+380501811050" class="binct-phone-number-1">+38 (050) 181-10-50</a></p>
-						</li>
-						<li class="cont-item">
-							<img src="img/footer/phone-call.png" alt="" class="img-responsive">
-							<p class="cont"><a href="tel:+380672506779" class="binct-phone-number-2">+38 (067) 250-67-79</a></p>
+							<p class="cont"><a href="tel:+380677596326" class="ct-phone">+38 (067) 759-63-26</a></p>
 						</li>
 						<li class="cont-item">
 							<img src="img/footer/mail.png" alt="" class="img-responsive">
@@ -2269,7 +2285,7 @@
 							</a>
 						</div>
 						<div class="soc-item">
-							<a href="https://www.instagram.com/aquagradus/" target="_blank">
+							<a href="https://www.instagram.com/aquagradus.team/" target="_blank">
 								<img src="img/footer/instagram.png" alt="" class="img-responsive">
 							</a>
 						</div>
@@ -2303,31 +2319,13 @@
 		</div>
 	</footer>
 	<script src="js/scripts.min.js"></script>
-	<!-- Binotel GetCall -->
-	<script type="text/javascript">
-	(function(d, w, s) {
-	var widgetHash = 'z1fokvh51efsefswz16g', gcw = d.createElement(s); gcw.type = 'text/javascript'; gcw.async = true;
-	gcw.src = '//widgets.binotel.com/getcall/widgets/'+ widgetHash +'.js';
-	var sn = d.getElementsByTagName(s)[0]; sn.parentNode.insertBefore(gcw, sn);
-	})(document, window, 'script');
-	</script>
-	<!-- Binotel GetCall -->
-	<!-- Bitrix -->
+	<!-- Bitrix widget -->
 	<script>
 	(function(w,d,u){
 	var s=d.createElement('script');s.async=true;s.src=u+'?'+(Date.now()/60000|0);
 	var h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);
 	})(window,document,'https://cdn.bitrix24.ua/b6001361/crm/site_button/loader_19_g6g78o.js');
 	</script>
-	<!-- Bitrix -->
-	<!-- Binotel CallTracking -->
-	<script type="text/javascript">
-	(function(d, w, s) {
-	var widgetHash = '7krojd8bov74s9xws2z1', ctw = d.createElement(s); ctw.type = 'text/javascript'; ctw.async = true;
-	ctw.src = '//widgets.binotel.com/calltracking/widgets/'+ widgetHash +'.js';
-	var sn = d.getElementsByTagName(s)[0]; sn.parentNode.insertBefore(ctw, sn);
-	})(document, window, 'script');
-	</script>
-	<!-- Binotel CallTracking -->
+	<!-- Bitrix widget -->
 </body>
 </html>
