--- a/app/sps/index.html
+++ b/app/sps/index.html
@@ -24,10 +24,21 @@
 		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 		})(window,document,'script','dataLayer','GTM-TGXVGW8');</script>
 		<!-- End Google Tag Manager -->
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-NGR64NJ');</script>
+		<!-- End Google Tag Manager -->
 	</head>
 	<body>
 		<!-- Google Tag Manager (noscript) -->
 		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TGXVGW8"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NGR64NJ"
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- End Google Tag Manager (noscript) -->
 		<section class="adds">
@@ -39,11 +50,11 @@
 						<div class="carousel-item active" data-item="item">
 							<div class="carusel-box">
 								<div class="adds-box">
-									<img src="../img/adds/nasadka.png" alt="Насадка СПН для самогонного аппарата" class="img-responsive adds-img">
-									<p class="adds-name">Спирально призматическая насадка (СПН), 1.5 кг</p>
-									<div class="adds-text">Для получения ректификата, 96.6 градусов.</div>
+									<img src="../img/adds/nasadka.png" alt="Кольца Рашига (пищевая медь) для самогонного аппарата" class="img-responsive adds-img">
+									<p class="adds-name">Кольца Рашига (пищевая медь), 0.5 кг</p>
+									<div class="adds-text">Очищайте "злачные и фруктовые" браги от сернистых соединений.</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>1500грн</p>
+										<p class="price"><span>Цена: </span>355грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-nasadka">подробнее</button>
 								</div>
@@ -65,7 +76,7 @@
 									<p class="adds-name">Водяной ТЭН для самогонного аппарата</p>
 									<div class="adds-text">Для организации автономного и комбинированного нагрева.</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>250грн</p>
+										<p class="price"><span>Цена: </span>300грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-ten">подробнее</button>
 								</div>
@@ -83,11 +94,11 @@
 						<div class="carousel-item" data-item="item">
 							<div class="carusel-box">
 								<div class="adds-box">
-									<img src="../img/adds/deflegmator.png" alt="" class="img-responsive adds-img">
-									<p class="adds-name">Дефлегматор AquaGradus</p>
-									<div class="adds-text">Для эксперементов, перегонка: густых зерновых браг, фруктовых ароматных браг.</div>
+									<img src="../img/adds/deflegmator.png" alt="Спиртовые дрожжи Coobra" class="img-responsive adds-img">
+									<p class="adds-name">Спиртовые дрожжи Coobra</p>
+									<div class="adds-text">Быстро выбраживают, высокая спиртуозность, нет посторонних запахов.</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>1000грн</p>
+										<p class="price"><span>Цена: </span>150грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-deflegmator">подробнее</button>
 								</div>
@@ -118,7 +129,7 @@
 									<p class="adds-name">Набор профессиональных ареометров и мерная колба</p>
 									<div class="adds-text">Для точного измерения продукта (3 ареометра и мерная колба).</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>350грн</p>
+										<p class="price"><span>Цена: </span>450грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-kit">подробнее</button>
 								</div>
@@ -309,7 +320,7 @@
 										Цена:
 									</div>
 									<div class="price">
-										250₴
+										300₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-ten-form">
@@ -624,7 +635,7 @@
 										Цена:
 									</div>
 									<div class="price">
-										350₴
+										450₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-areometri-form">
@@ -662,13 +673,13 @@
 							<img src="../img/footer/placeholder.png" alt="" class="img-responsive">
 							<p class="cont">г. Харьков, ул. Пушкинская 3</p>
 						</li>
+						<!-- <li class="cont-item">
+							<img src="../img/footer/phone-call.png" alt="" class="img-responsive">
+							<p class="cont"><a href="tel:+380500113084">+38 (050) 011-30-84</a></p>
+						</li> -->
 						<li class="cont-item">
 							<img src="../img/footer/phone-call.png" alt="" class="img-responsive">
-							<p class="cont"><a href="tel:+380501811050">+38 (050) 181-10-50</a></p>
-						</li>
-						<li class="cont-item">
-							<img src="../img/footer/phone-call.png" alt="" class="img-responsive">
-							<p class="cont"><a href="tel:+380672506779">+38 (067) 250-67-79</a></p>
+							<p class="cont"><a href="tel:+380677596326">+38 (067) 759-63-26</a></p>
 						</li>
 						<li class="cont-item">
 							<img src="../img/footer/mail.png" alt="" class="img-responsive">
@@ -713,7 +724,7 @@
 							</a>
 						</div>
 						<div class="soc-item">
-							<a href="https://www.instagram.com/aquagradus/" target="_blank">
+							<a href="https://www.instagram.com/aquagradus.team/" target="_blank">
 								<img src="../img/footer/instagram.png" alt="" class="img-responsive">
 							</a>
 						</div>
